# spider

./: .bazelignore  .bazelrc  .gitignore  BAZEL_FILES.md  BAZEL_MIGRATION.md  BAZEL_README.md  BUILD.bazel  MODULE.bazel  README.bazel.md  README.md  WORKSPACE.bzlmod  all_crates.txt  bazel-bin  bazel-out  bazel-spider  bazel-testlogs  crates.bzl  features.bzl  patch_module.sh  spider_choosealicense.json
bazel/: features.bzl
benches/: BUILD.bazel
examples/: BUILD.bazel
spider/: BUILD.bazel  Cargo.toml
spider_agent/: BUILD.bazel
spider_agent_html/: BUILD.bazel
spider_agent_types/: BUILD.bazel
spider_cli/: BUILD.bazel
spider_utils/: BUILD.bazel
spider_worker/: BUILD.bazel
tools/bazel/: cargo_release_binary.sh
