package(default_visibility = ["//visibility:public"])

alias(
    name = "spider_cli_release",
    actual = "//spider_cli:spider",
)

alias(
    name = "spider_worker_release",
    actual = "//spider_worker:spider_worker",
)

genrule(
    name = "spider_release_archive",
    srcs = [
        ":spider_cli_release",
        ":spider_worker_release",
        "LICENSE",
        "README.md",
    ],
    outs = ["spider_release.tar.gz"],
    cmd = """
set -euo pipefail
pkg_root="$(@D)/package_root"
rm -rf "$$pkg_root"
mkdir -p "$$pkg_root/bin" "$$pkg_root/share/doc/spider"
cp "$(location :spider_cli_release)" "$$pkg_root/bin/spider"
cp "$(location :spider_worker_release)" "$$pkg_root/bin/spider_worker"
cp "$(location LICENSE)" "$$pkg_root/share/doc/spider/LICENSE"
cp "$(location README.md)" "$$pkg_root/share/doc/spider/README.md"
chmod 0755 "$$pkg_root/bin/spider" "$$pkg_root/bin/spider_worker"
tar -C "$$pkg_root" -czf "$@" .
""",
)
