package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@crates//:defs.bzl", "aliases", "all_crate_deps")

SPIDER_EXAMPLES = [
    "advanced_configuration",
    "anti_bots",
    "auto_encoding",
    "blacklist",
    "budget",
    "cache",
    "cache_chrome_hybrid",
    "cache_remote_skip_browser",
    "callback",
    "chrome",
    "chrome_remote",
    "chrome_remote_tls",
    "chrome_screenshot",
    "chrome_screenshot_with_config",
    "chrome_sendable",
    "chrome_viewport",
    "chrome_web_automation",
    "concurrent_profiles",
    "configuration",
    "cron",
    "css_scrape",
    "debug",
    "depth",
    "download",
    "download_to_react",
    "encoding",
    "example",
    "gemini",
    "loop",
    "not_a_robot",
    "not_a_robot_chrome_ai",
    "not_a_robot_haiku",
    "openai",
    "openai_cache",
    "openai_extra",
    "openai_multi",
    "queue",
    "real_world",
    "remote_multimodal",
    "remote_multimodal_benchmark",
    "remote_multimodal_dual",
    "remote_multimodal_dual_automation",
    "remote_multimodal_listing",
    "remote_multimodal_multi",
    "remote_multimodal_quotes",
    "remote_multimodal_scrape",
    "rss",
    "scrape",
    "serde",
    "sitemap",
    "sitemap_only",
    "smart",
    "subscribe",
    "subscribe_download",
    "subscribe_multiple",
    "url_glob",
    "url_glob_subdomains",
    "webdriver",
    "webdriver_remote",
    "webdriver_screenshot",
    "whitelist",
]

_spider_examples = [
    rust_binary(
        name = example_name,
        srcs = ["%s.rs" % example_name],
        aliases = aliases(
            normal = True,
            normal_dev = True,
            proc_macro = True,
            proc_macro_dev = True,
        ),
        crate_root = "%s.rs" % example_name,
        deps = all_crate_deps(
            normal = True,
            normal_dev = True,
        ) + [
            "//spider:spider_workspace",
        ],
        edition = "2021",
        proc_macro_deps = all_crate_deps(
            proc_macro = True,
            proc_macro_dev = True,
        ),
        version = "2.37.105",
    )
    for example_name in SPIDER_EXAMPLES
]
