package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@crates//:defs.bzl", "aliases", "all_crate_deps")

rust_library(
    name = "spider_agent_html",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(
        normal = True,
        proc_macro = True,
    ),
    crate_name = "spider_agent_html",
    deps = all_crate_deps(normal = True) + [
        "//spider_agent_types:spider_agent_types",
    ],
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    version = "2.47.22",
)

rust_test(
    name = "spider_agent_html_unit_test",
    crate = ":spider_agent_html",
    aliases = aliases(
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ) + [
        "//spider_agent_types:spider_agent_types",
    ],
    edition = "2021",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    version = "2.47.22",
)
